--- a/static/register.html
+++ b/static/register.html
@@ -143,6 +143,7 @@
                 if(res.ok){
                     messageDiv.innerText = result.message;
                     otpForm.style.display = "none";
+                    location.href = '/';
                 }else
                     messageDiv.innerText = result.error || "OTP không hợp lệ.";
             }catch(err){
