--- a/static/login.html
+++ b/static/login.html
@@ -22,13 +22,13 @@
                     <span>Người mới?</span>
                     <a class="border border-dark roundA30" href="/register">Tạo tài khoản</a> 
                 </div>
-                <form action="/login" method="POST">
+                <form action="/login" method="POST" id="loginForm" novalidate>
                     <div class="input-field col s12">
-                        <input id="email" type="email" name="email" required>
+                        <input id="email" type="email" name="email">
                         <label for="email">Email</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="password" type="password" name="password" required>
+                        <input id="password" type="password" name="password">
                         <label for="password">Mật khẩu</label>
                     </div>
                     <button class="btn btn-primary w-100" style="border-radius: 25px;">Đăng nhập</button>
@@ -40,6 +40,41 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        document.querySelector("#loginForm").addEventListener('submit', e => {
+            e.preventDefault();
+
+            const email = document.querySelector('#email').value.trim();
+            const password = document.querySelector('#password').value.trim();
+
+            if (!email) {
+                Swal.fire({ 
+                    icon: "error", 
+                    text: "Vui lòng nhập email" 
+                });
+                return;
+            }
+
+            if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
+                Swal.fire({ 
+                    icon: "error", 
+                    text: "Định dạng email không hợp lệ" 
+                });
+                return;
+            }
+
+            if (!password) {
+                Swal.fire({ 
+                    icon: "error", 
+                    text: "Vui lòng nhập mật khẩu" 
+                });
+                return;
+            }
+
+            e.target.submit();
+        })
+    </script>
 </body>
 
 </html>
