--- a/static/register.html
+++ b/static/register.html
@@ -41,38 +41,38 @@
             </figure>
             <div class="registerBox text-center w-50">
                 <h2 class="pb-4">Tạo tài khoản</h2>
-                <form id="registerForm">
+                <form id="registerForm" novalidate>
                     <div class="input-field col s12">
-                        <input id="full_name" type="text" name="full_name" required>
+                        <input id="full_name" type="text" name="full_name">
                         <label for="full_name">Họ và tên</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="email" type="email" name="email" required>
+                        <input id="email" type="email" name="email">
                         <label for="email">Email</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="address" type="text" name="address" required>
+                        <input id="address" type="text" name="address">
                         <label for="address">Địa chỉ</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="password" type="password" name="password" required>
+                        <input id="password" type="password" name="password">
                         <label for="password">Mật khẩu</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="passwordConfirm" type="password" name="passwordConfirm" required>
+                        <input id="passwordConfirm" type="password" name="passwordConfirm">
                         <label for="passwordConfirm">Xác nhận lại mật khẩu</label>
                     </div>
                     <div class="g-recaptcha p-3" data-sitekey="6LfyygYsAAAAAHHUL3bRpqX3z2C37jijvnq75Z_F"></div>
                     <button class="btn btn-primary w-100" style="border-radius: 25px;">Đăng ký</button>
                 </form>
-                <form id="otpForm" style="display:none;">
+                <form id="otpForm" style="display:none;" novalidate>
                     <div class="input-field col s12">
-                    <input id="otp" type="text" name="otp" required>
+                    <input id="otp" type="text" name="otp">
                     <label for="otp">Nhập mã OTP</label>
                     </div>
                     <button type="submit" class="btn btn-success w-100" style="border-radius: 25px;">Xác nhận OTP</button>
                 </form>
-                <div id="message" class="p-3 text-center"></div>
+                <div id="message" class="p-3 text-center text-danger fw-semibold"></div>
                 <div class="separator">hoặc</div>
                 <a class="border border-dark roundA30 font-weight-bold" href="/auth/google"><img
                         src="https://img.icons8.com/color/100/000000/google-logo.png" alt="Google">Tiếp tục với
@@ -83,6 +83,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         const registerForm = document.getElementById("registerForm");
         const otpForm = document.getElementById("otpForm");
@@ -93,9 +94,27 @@
         registerForm.addEventListener("submit", async (e) => {
             e.preventDefault();
 
+            const fullName = document.querySelector('#full_name').value.trim();
+            const email = document.querySelector('#email').value.trim();
+            const address = document.querySelector('#address').value.trim();
             const password = document.getElementById("password").value.trim();
             const passwordConfirm = document.getElementById("passwordConfirm").value.trim();
 
+            if (!fullName) {
+                messageDiv.innerText = "Vui lòng nhập họ tên.";
+                return;
+            }
+
+            if (!email) {
+                messageDiv.innerText = "Vui lòng nhập email.";
+                return;
+            }
+
+            if (!address) {
+                messageDiv.innerText = "Vui lòng nhập địa chỉ.";
+                return;
+            }
+            
             if (password.length < 6) {
                 messageDiv.innerText = "Mật khẩu phải có ít nhất 6 ký tự.";
                 return;
@@ -110,7 +129,7 @@
             const token = grecaptcha.getResponse(); 
 
             if(!token){
-                alert("Vui lòng xác nhận reCAPTCHA");
+                messageDiv.innerText = "Vui lòng xác nhận reCAPTCHA";
                 return;
             }
 
@@ -140,6 +159,14 @@
         otpForm.addEventListener("submit", async (e) => {
             e.preventDefault();
             const otp = document.getElementById("otp").value.trim();
+
+            if (!otp) {
+                await Swal.fire({ 
+                    icon: "error", 
+                    text: "Vui lòng mã otp"
+                });
+                return;
+            }
 
             try {
                 const res = await fetch("/verify-otp", {
