--- a/static/register.html
+++ b/static/register.html
@@ -110,6 +110,11 @@
                 return;
             }
 
+            if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
+                messageDiv.innerText = "Định dạng email không hợp lệ.";
+                return;
+            }
+
             if (!address) {
                 messageDiv.innerText = "Vui lòng nhập địa chỉ.";
                 return;
